--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   chewie: ^1.7.0
   collection: ^1.17.2
   contextmenu: ^3.0.0
-  dart_vlc: ^0.4.0
+#  dart_vlc: ^0.4.0
   desktop_drop: ^0.4.1
   diacritic: ^0.1.4
   dio: ^5.3.2
@@ -27,11 +27,13 @@ dependencies:
   flutter_portal: ^1.1.4
   flutter_svg: ^2.0.7
   http_parser: ^4.0.2
-  image_gallery_saver: ^2.0.3
+#  image_gallery_saver: ^2.0.3
   image_picker: ^1.0.2
   image_size_getter: ^2.1.2
   jiffy: ^6.2.1
   lottie: ">=2.6.0 <4.0.0"
+  media_kit: ^1.1.10+1
+  media_kit_video: ^1.2.4
   meta: ^1.9.1
   path_provider: ^2.1.0
   photo_manager: ^3.0.0
@@ -45,6 +47,11 @@ dependencies:
   url_launcher: ^6.1.12
   video_player: ^2.7.0
   video_thumbnail: ^0.5.3
+
+  image_gallery_saver:
+    git:
+      url: https://github.com/knottx/image_gallery_saver.git
+      ref: knottx
 
 flutter:
   plugin:
