--- a/packages/stream_chat_flutter/pubspec.yaml
+++ b/packages/stream_chat_flutter/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   lottie: ">=2.6.0 <4.0.0"
   media_kit: ^1.1.10+1
   media_kit_video: ^1.2.4
+  media_kit_libs_video: ^1.0.4
+  media_kit_libs_audio: ^1.0.4
   meta: ^1.9.1
   path_provider: ^2.1.0
   photo_manager: ^3.0.0
